--- a/index.html
+++ b/index.html
@@ -65,7 +65,30 @@
 
 </header>
   
-   
+    <section id="QuienesSomos" class="container-fluid bg-black d-none d-sm-block">
+      <div class="container text-light">
+        <h1 class="text-center py-5">¿Quienes somos?</h1>
+        <div class="row">
+          <div class="col">
+                <div class="bg-info text-center py-1 mb-3">
+                  <i class="fa-solid fa-plane fa-lg"></i>
+                </div>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus iusto aut vero esse earum sed est eaque dicta ea ipsum praesentium exercitationem assumenda doloribus similique animi nesciunt, labore voluptatum omnis ullam dolor laboriosam repellendus commodi in eos? Totam, asperiores excepturi neque magnam beatae voluptas quidem soluta quasi assumenda cupiditate dolorum!
+          </div>
+          <div class="col">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus iusto aut vero esse earum sed est eaque dicta ea ipsum praesentium exercitationem assumenda doloribus similique animi nesciunt, labore voluptatum omnis ullam dolor laboriosam repellendus commodi in eos? Totam, asperiores excepturi neque magnam beatae voluptas quidem soluta quasi assumenda cupiditate dolorum! 
+            <div class="bg-info text-center py-1 mt-3">
+              <i class="fa-solid fa-mountain fa-lg"></i>
+            </div>
+          </div>
+          <div class="col">
+            <div class="bg-info text-center py-1 mb-3">
+              <i class="fa-solid fa-route fa-lg"></i>
+            </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus iusto aut vero esse earum sed est eaque dicta ea ipsum praesentium exercitationem assumenda doloribus similique animi nesciunt, labore voluptatum omnis ullam dolor laboriosam repellendus commodi in eos? Totam, asperiores excepturi neque magnam beatae voluptas quidem soluta quasi assumenda cupiditate dolorum!</div>
+        </div>
+      </div>
+    </section>
     <section id="destacados" class="container-fluid bg-black text-light">
       <h2 class="text-center py-5">
         Destacados
