fix: text accent

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               </li>
               <li class="nav-item d-none d-sm-block">
                 <a class="nav-link text-light" href="#QuienesSomos"
-                  >Quienes Somos</a
+                  >Quiénes Somos</a
                 >
               </li>
               <li class="nav-item">
@@ -132,7 +132,7 @@
       class="container-fluid bg-black d-none d-sm-block"
     >
       <div class="container text-light">
-        <h1 class="text-center py-5">¿Quienes somos?</h1>
+        <h1 class="text-center py-5">¿Quiénes somos?</h1>
         <div class="row">
           <div class="col">
             <div class="bg-info text-center py-1 mb-3">
