feat: add alternative text img

--- a/index.html
+++ b/index.html
@@ -88,21 +88,21 @@
             <img
               src="./assets/img/carousel1.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Imagen con varias llamas en el altiplano, norte de Chile"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/img/carousel2.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Imagen de moais en un atardecer en Rapa Nui"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/img/carousel3.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Imagen de un Pingüino en la zona austral de Chile"
             />
           </div>
         </div>
