fix: text cards

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Lorem, ipsum dolor.</h5>
+              <h5 class="card-title">Lago Pehoé, Magallanes</h5>
 
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -202,7 +202,7 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
+              <h5 class="card-title">Laguna verde, Atacama</h5>
 
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -221,7 +221,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">
-                Lorem ipsum dolor sit amet consectetur.
+                Salares en el norte de Chile
               </h5>
 
               <p class="card-text">
@@ -240,7 +240,7 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Lorem ipsum dolor sit.</h5>
+              <h5 class="card-title">Bosque nativo, sur de Chile</h5>
 
               <p class="card-text">
                 Some quick example text to build on the card title and make up
