--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -153,8 +153,7 @@
             Totam, asperiores excepturi neque magnam beatae voluptas quidem
             soluta quasi assumenda cupiditate dolorum!
             <div class="bg-info text-center py-1 mt-3">
-              <i class="fa-solid fa-mountain fa-lg"></i>
-            </div>
+              <i class="fa-solid fa-mountain-sun fa-lg"></i>            </div>
           </div>
           <div class="col">
             <div class="bg-info text-center py-1 mb-3">
@@ -300,9 +299,9 @@
     <div class="row text-center">
       <div class="col">VIAJES CHILE</div>
       <div class="col">
-        <i class="fa-brands fa-square-github fa-lg mx-1"></i>
+        <i   class="fa-brands fa-square-github fa-lg mx-1"></i>
         <i class="fa-brands fa-linkedin fa-lg mx-1"></i>
-        <i class="fa-brands fa-square-twitter fa-lg mx-1"></i>
+        <i class="fa-brands fa-square-x-twitter fa-lg mx-1"></i>
         <i class="fa-brands fa-square-facebook fa-lg mx-1"></i>
       </div>
     </div>
