--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </nav>
       <!-- Carrusel -->
-      <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
