fix: change form size

--- a/index.html
+++ b/index.html
@@ -253,59 +253,64 @@
     <!-- Form -->
     <section id="contacto" class="container-fluid bg-black text-light py-5">
       <h2 class="text-center py-3">Contacto</h2>
-      <form action="#">
-        <div class="container">
-          <div class="mb-3">
-            <label for="InputName" class="form-label">Nombre</label>
-            <input
-              type="text"
-              class="form-control"
-              id="InputName"
-              aria-describedby="nameHelp" required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="InputLastName" class="form-label">Apellido</label>
-            <input
-              type="text"
-              class="form-control"
-              id="InputLastName"
-              aria-describedby="LastNameHelp" required
-            />
-          </div>
-            <div class="mb-3">
-            <label for="InputEmail" class="form-label">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="InputEmail"
-              aria-describedby="emailHelp" required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="FormControlTextarea" class="form-label"
-              >Mensaje</label
-            >
-            <textarea
-              class="form-control"
-              id="FormControlTextarea"
-              rows="3" required
-            ></textarea>
+      <div class="container">
+        <div class="row justify-content-md-center">
+          <div class="col col-6">
+            <form action="#">
+              <div class="mb-3">
+              <label for="InputName" class="form-label">Nombre</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="InputName"
+                  aria-describedby="nameHelp" required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="InputLastName" class="form-label">Apellido</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="InputLastName"
+                  aria-describedby="LastNameHelp" required
+                />
+              </div>
+                <div class="mb-3">
+                <label for="InputEmail" class="form-label">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="InputEmail"
+                  aria-describedby="emailHelp" required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="FormControlTextarea" class="form-label"
+                  >Mensaje</label
+                >
+                <textarea
+                  class="form-control"
+                  id="FormControlTextarea"
+                  rows="3" required
+                ></textarea>
+              </div>
+    
+              <button
+                id="btnEnviar"
+                type="submit"
+                class="btn btn-info text-light"
+                data-bs-toggle="tooltip"
+                data-bs-placement="right"
+                data-bs-custom-class="custom-tooltip"
+                data-bs-title="Presiona para enviar y nos contactaremos contigo"
+              >
+                Enviar
+              </button>
+            </form>
           </div>
 
-          <button
-            id="btnEnviar"
-            type="submit"
-            class="btn btn-info text-light"
-            data-bs-toggle="tooltip"
-            data-bs-placement="right"
-            data-bs-custom-class="custom-tooltip"
-            data-bs-title="Presiona para enviar y nos contactaremos contigo"
-          >
-            Enviar
-          </button>
         </div>
-      </form>
+        </div>
     </section>
       <footer class="container-fluid bg-info text-light py-3">
     <div class="row text-center">
@@ -334,7 +339,9 @@
         '[data-bs-toggle="tooltip"]'
       );
       const tooltipList = [...tooltipTriggerList].map(
-        (tooltipTriggerEl) => new bootstrap.Tooltip(tooltipTriggerEl)
+        (tooltipTriggerEl) => new bootstrap.Tooltip(tooltipTriggerEl, {
+          customClass: 'custom-tooltip'
+        })
       );
     </script>
   </body>
