--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/img/carousel1.jpg"
+              src="./assets/img/carousel1.webp"
               class="d-block w-100"
               alt="Imagen con varias llamas en el altiplano, norte de Chile"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/img/carousel2.jpg"
+              src="./assets/img/carousel2.webp"
               class="d-block w-100"
               alt="Imagen de moais en un atardecer en Rapa Nui"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/img/carousel3.jpg"
+              src="./assets/img/carousel3.webp"
               class="d-block w-100"
               alt="Imagen de un Pingüino en la zona austral de Chile"
             />
@@ -178,7 +178,7 @@
             style="width: 18rem"
           >
             <img
-              src="./assets/img/card1.jpg"
+              src="./assets/img/card1.webp"
               class="card-img-top img-fluid"
               alt="..."
             />
@@ -196,7 +196,7 @@
             style="width: 18rem"
           >
             <img
-              src="./assets/img/card2.jpg"
+              src="./assets/img/card2.webp"
               class="card-img-top img-fluid"
               alt="..."
             />
@@ -214,7 +214,7 @@
             style="width: 18rem"
           >
             <img
-              src="./assets/img/card3.jpg"
+              src="./assets/img/card3.webp"
               class="card-img-top img-fluid"
               alt="..."
             />
@@ -234,7 +234,7 @@
             style="width: 18rem"
           >
             <img
-              src="./assets/img/card4.jpg"
+              src="./assets/img/card4.webp"
               class="card-img-top img-fluid"
               alt="..."
             />
@@ -294,7 +294,8 @@
                   rows="3" required name="message"
                 ></textarea>
               </div>
-    
+              <input type="hidden" name="_captcha" value="false">
+
               <button
                 id="btnEnviar"
                 type="submit"
@@ -333,8 +334,8 @@
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
-<!--     <script src="./assets/js/script.js"></script>
- -->    <script>
+     <script src="./assets/js/script.js"></script>
+     <script>
       const tooltipTriggerList = document.querySelectorAll(
         '[data-bs-toggle="tooltip"]'
       );
