--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       <div class="container">
         <div class="row justify-content-md-center">
           <div class="col col-6">
-            <form  id="formContact" action="https://formsubmit.co/4748997da2724d75358c50761c026731" method="POST">
+            <form  id="formContact" action="https://formspree.io/f/xblyngze" method="POST">
               <div class="mb-3">
               <label for="inputName" class="form-label">Nombre</label>
                 <input
@@ -335,6 +335,7 @@
       crossorigin="anonymous"
     ></script>
      <script src="./assets/js/script.js"></script>
+     
      <script>
       const tooltipTriggerList = document.querySelectorAll(
         '[data-bs-toggle="tooltip"]'
