--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="./assets/img/viajes.svg">
+    <link rel="icon" type="image/x-icon" href="./assets/img/viajes.svg" />
     <title>Viajes Chile</title>
   </head>
   <body>
@@ -82,7 +82,11 @@
         </div>
       </nav>
       <!-- Carrusel -->
-      <div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div
+        id="carouselExample"
+        class="carousel slide carousel-fade"
+        data-bs-ride="carousel"
+      >
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
@@ -153,7 +157,8 @@
             Totam, asperiores excepturi neque magnam beatae voluptas quidem
             soluta quasi assumenda cupiditate dolorum!
             <div class="bg-info text-center py-1 mt-3">
-              <i class="fa-solid fa-mountain-sun fa-lg"></i>            </div>
+              <i class="fa-solid fa-mountain-sun fa-lg"></i>
+            </div>
           </div>
           <div class="col">
             <div class="bg-info text-center py-1 mb-3">
@@ -219,9 +224,7 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">
-                Salares en el norte de Chile
-              </h5>
+              <h5 class="card-title">Salares en el norte de Chile</h5>
 
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -256,14 +259,17 @@
       <div class="container">
         <div class="row justify-content-md-center">
           <div class="col col-6">
-            <form  id="formContact" action="https://formspree.io/f/xblyngze" method="POST">
+            <form id="formContact">
               <div class="mb-3">
-              <label for="inputName" class="form-label">Nombre</label>
+                <label for="inputName" class="form-label">Nombre</label>
                 <input
                   type="text"
                   class="form-control"
                   id="inputName"
-                  aria-describedby="nameHelp" required name="name"
+                  aria-describedby="nameHelp"
+                  required
+                  name="name"
+                  placeholder="Escriba su nombre"
                 />
               </div>
               <div class="mb-3">
@@ -272,16 +278,22 @@
                   type="text"
                   class="form-control"
                   id="inputLastName"
-                  aria-describedby="LastNameHelp" required name="lastName"
+                  aria-describedby="LastNameHelp"
+                  required
+                  name="lastName"
+                  placeholder="Escriba su apellido"
                 />
               </div>
-                <div class="mb-3">
+              <div class="mb-3">
                 <label for="inputEmail" class="form-label">Email</label>
                 <input
                   type="email"
                   class="form-control"
                   id="inputEmail"
-                  aria-describedby="emailHelp" required name="email"
+                  aria-describedby="emailHelp"
+                  required
+                  name="email"
+                  placeholder="email@gmail.com"
                 />
               </div>
               <div class="mb-3">
@@ -291,10 +303,12 @@
                 <textarea
                   class="form-control"
                   id="formControlTextarea"
-                  rows="3" required name="message"
+                  rows="3"
+                  required
+                  name="message"
                 ></textarea>
               </div>
-              <input type="hidden" name="_captcha" value="false">
+              <input type="hidden" name="_captcha" value="false" />
 
               <button
                 id="btnEnviar"
@@ -309,21 +323,40 @@
               </button>
             </form>
           </div>
-
         </div>
-        </div>
-    </section>
-      <footer class="container-fluid bg-info text-light py-3">
-    <div class="row text-center">
-      <div class="col">VIAJES CHILE</div>
-      <div class="col">
-        <i   class="fa-brands fa-square-github fa-lg mx-1"></i>
-        <i class="fa-brands fa-linkedin fa-lg mx-1"></i>
-        <i class="fa-brands fa-square-x-twitter fa-lg mx-1"></i>
-        <i class="fa-brands fa-square-facebook fa-lg mx-1"></i>
       </div>
-    </div>
-  </footer>
+      <!-- Toast -->
+      <div class="toast-container position-fixed bottom-0 end-0 p-3 mb-5">
+        <div
+          id="toastSuccess"
+          class="toast align-items-center text-dark fw-semibold bg-info-subtle border-0"
+          role="alert"
+          aria-live="assertive"
+          aria-atomic="true"
+        >
+          <div class="d-flex">
+            <div class="toast-body">¡Formulario enviado correctamente!</div>
+            <button
+              type="button"
+              class="btn-close btn-close-dark me-2 m-auto"
+              data-bs-dismiss="toast"
+              aria-label="Cerrar"
+            ></button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="container-fluid bg-info text-light py-3">
+      <div class="row text-center">
+        <div class="col">VIAJES CHILE</div>
+        <div class="col">
+          <i class="fa-brands fa-square-github fa-lg mx-1"></i>
+          <i class="fa-brands fa-linkedin fa-lg mx-1"></i>
+          <i class="fa-brands fa-square-x-twitter fa-lg mx-1"></i>
+          <i class="fa-brands fa-square-facebook fa-lg mx-1"></i>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -334,16 +367,17 @@
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
-     <script src="./assets/js/script.js"></script>
-     
-     <script>
+    <script src="./assets/js/script.js"></script>
+
+    <script>
       const tooltipTriggerList = document.querySelectorAll(
         '[data-bs-toggle="tooltip"]'
       );
       const tooltipList = [...tooltipTriggerList].map(
-        (tooltipTriggerEl) => new bootstrap.Tooltip(tooltipTriggerEl, {
-          customClass: 'custom-tooltip'
-        })
+        (tooltipTriggerEl) =>
+          new bootstrap.Tooltip(tooltipTriggerEl, {
+            customClass: "custom-tooltip",
+          })
       );
     </script>
   </body>
