style: fix body card text

--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
               class="card-img-top img-fluid"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Lago Pehoé, Magallanes</h5>
 
-              <p class="card-text">
+              <p class="card-text mt-auto">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -205,10 +205,10 @@
               class="card-img-top img-fluid"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Laguna verde, Atacama</h5>
 
-              <p class="card-text">
+              <p class="card-text mt-auto">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -223,10 +223,10 @@
               class="card-img-top img-fluid"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Salares en el norte de Chile</h5>
 
-              <p class="card-text">
+              <p class="card-text mt-auto">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -241,10 +241,10 @@
               class="card-img-top img-fluid"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Bosque nativo, sur de Chile</h5>
 
-              <p class="card-text">
+              <p class="card-text mt-auto">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
