style: fix quienes somos cards text

--- a/index.html
+++ b/index.html
@@ -138,38 +138,28 @@
       <div class="container text-light">
         <h1 class="text-center py-5">¿Quiénes somos?</h1>
         <div class="row">
-          <div class="col">
+          <div class="col d-flex flex-column">
             <div class="bg-info text-center py-1 mb-3">
               <i class="fa-solid fa-plane fa-lg"></i>
             </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus iusto
-            aut vero esse earum sed est eaque dicta ea ipsum praesentium
-            exercitationem assumenda doloribus similique animi nesciunt, labore
-            voluptatum omnis ullam dolor laboriosam repellendus commodi in eos?
-            Totam, asperiores excepturi neque magnam beatae voluptas quidem
-            soluta quasi assumenda cupiditate dolorum!
+            <p class="mt-auto">Chile es un destino de viaje emocionante y diverso, con paisajes naturales impresionantes que van desde los Andes hasta la costa del Pacífico. Desde el desierto más árido del mundo en el norte, hasta los glaciares y fiordos de la Patagonia en el sur, Chile ofrece una gran variedad de experiencias para todos los gustos y preferencias.</p>
+            
           </div>
-          <div class="col">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus iusto
-            aut vero esse earum sed est eaque dicta ea ipsum praesentium
-            exercitationem assumenda doloribus similique animi nesciunt, labore
-            voluptatum omnis ullam dolor laboriosam repellendus commodi in eos?
-            Totam, asperiores excepturi neque magnam beatae voluptas quidem
-            soluta quasi assumenda cupiditate dolorum!
-            <div class="bg-info text-center py-1 mt-3">
+          <div class="col d-flex flex-column">
+            <p>
+              Chile es un destino de viaje emocionante y diverso, con climas que varían desde el calor desértico del norte hasta el frío polar de la Patagonia en el sur. Con un clima mediterráneo en el centro y un clima templado lluvioso en el sur, Chile ofrece una gran variedad de experiencias para todos los gustos y preferencias.
+            </p>
+            <div class="bg-info text-center py-1 mt-auto">
               <i class="fa-solid fa-mountain-sun fa-lg"></i>
             </div>
           </div>
-          <div class="col">
+          <div class="col d-flex flex-column">
             <div class="bg-info text-center py-1 mb-3">
               <i class="fa-solid fa-route fa-lg"></i>
             </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus iusto
-            aut vero esse earum sed est eaque dicta ea ipsum praesentium
-            exercitationem assumenda doloribus similique animi nesciunt, labore
-            voluptatum omnis ullam dolor laboriosam repellendus commodi in eos?
-            Totam, asperiores excepturi neque magnam beatae voluptas quidem
-            soluta quasi assumenda cupiditate dolorum!
+            <p class="mt-auto">
+              Chile ofrece una variedad de atractivos, como el desierto de Atacama, Torres del Paine, Valparaíso con su arquitectura colorida, Isla de Chiloé con su cultura única, la Patagonia con sus paisajes naturales impresionantes y Santiago con su vida nocturna y gastronomía, combinando naturaleza, cultura y aventura en un destino emocionante y diverso.
+            </p>
           </div>
         </div>
       </div>
