--- a/index.html
+++ b/index.html
@@ -133,16 +133,16 @@
 
     <section
       id="QuienesSomos"
-      class="container-fluid bg-black d-none d-sm-block"
+      class="container-fluid bg-black d-none d-sm-block pb-5"
     >
       <div class="container text-light">
         <h1 class="text-center py-5">¿Quiénes somos?</h1>
         <div class="row">
           <div class="col d-flex flex-column">
-            <div class="bg-info text-center py-1 mb-3">
+            <div class="bg-info text-center py-1">
               <i class="fa-solid fa-plane fa-lg"></i>
             </div>
-            <p class="mt-auto">Chile es un destino de viaje emocionante y diverso, con paisajes naturales impresionantes que van desde los Andes hasta la costa del Pacífico. Desde el desierto más árido del mundo en el norte, hasta los glaciares y fiordos de la Patagonia en el sur, Chile ofrece una gran variedad de experiencias para todos los gustos y preferencias.</p>
+            <p class="mt-auto mb-0">Ofrecemos paquetes de viajes emocionantes y diversos, con paisajes naturales impresionantes que van desde los Andes hasta la costa del Pacífico. Desde el desierto más árido del mundo en el norte, hasta los glaciares y fiordos de la Patagonia en el sur, Chile ofrece una gran variedad de experiencias para todos los gustos y preferencias.</p>
             
           </div>
           <div class="col d-flex flex-column">
@@ -157,15 +157,15 @@
             <div class="bg-info text-center py-1 mb-3">
               <i class="fa-solid fa-route fa-lg"></i>
             </div>
-            <p class="mt-auto">
+            <p class="mt-auto mb-0">
               Chile ofrece una variedad de atractivos, como el desierto de Atacama, Torres del Paine, Valparaíso con su arquitectura colorida, Isla de Chiloé con su cultura única, la Patagonia con sus paisajes naturales impresionantes y Santiago con su vida nocturna y gastronomía, combinando naturaleza, cultura y aventura en un destino emocionante y diverso.
             </p>
           </div>
         </div>
       </div>
     </section>
-    <section id="destacados" class="container-fluid bg-black text-light">
-      <h2 class="text-center py-5">Destacados</h2>
+    <section id="destacados" class="container-fluid bg-black text-light pb-5">
+      <h2 class="text-center pt-5 pb-4 ">Destacados</h2>
       <div class="container">
         <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-between">
           <div
