--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <section id="contacto" class="container-fluid bg-black text-light py-5">
       <h2 class="text-center py-3">Contacto</h2>
       <div class="container">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-center">
           <div class="col col-6">
             <form id="formContact">
               <div class="mb-3">
