--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
           <div class="carousel-item active">
             <img
               src="./assets/img/carousel1.webp"
-              class="d-block w-100"
+              class="img-fluid d-block w-100"
               alt="Imagen con varias llamas en el altiplano, norte de Chile"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/img/carousel2.webp"
-              class="d-block w-100"
+              class="img-fluid d-block w-100"
               alt="Imagen de moais en un atardecer en Rapa Nui"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/img/carousel3.webp"
-              class="d-block w-100"
+              class="img-fluid d-block w-100"
               alt="Imagen de un Pingüino en la zona austral de Chile"
             />
           </div>
